--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "reastaurants",
+  "name": "restaurants",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://tushrtyagi.github.io/FOOD-ordering-app_Hunger-Hub",  
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+   "predeploy": "npm run build", 
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "build": "^0.1.4",
